# empty_cmake_project

./: CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
docs/: conf.py  index.rst
examples/: CMakeLists.txt
examples/core/: CMakeLists.txt
include/: example.h
src/: CMakeLists.txt  Example.cpp
tests/test01/: CMakeLists.txt  example_test.cpp
